Fixed sponsor icons sizes on mobile

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -378,6 +378,8 @@ a {
         margin: 20px; }
         #sponsors .sponsors-list .gold .sponsor-icons img, #sponsors .sponsors-list .silver .sponsor-icons img, #sponsors .sponsors-list .bronze .sponsor-icons img, #sponsors .sponsors-list .partner .sponsor-icons img {
           width: 100%; }
+        #sponsors .sponsors-list .gold .sponsor-icons #bcs, #sponsors .sponsors-list .silver .sponsor-icons #bcs, #sponsors .sponsors-list .bronze .sponsor-icons #bcs, #sponsors .sponsors-list .partner .sponsor-icons #bcs {
+          width: 50%; }
   #sponsors #sponsor-slit-top {
     width: 100%;
     height: 130px;
@@ -409,6 +411,15 @@ a {
     background-color: rgba(0, 0, 0, 0.87);
     color: white; }
 
+@media screen and (max-width: 750px) {
+  #bcs {
+    width: 60% !important; }
+
+  .sponsor-icons {
+    width: 50% !important; } }
+@media screen and (max-width: 500px) {
+  #bcs {
+    width: 80% !important; } }
 #team {
   text-align: left;
   background-color: #1f1f1f;
